--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=rinha2025spring
 spring.data.mongodb.uri=mongodb://mongodb:27017/rinhabackend
-spring.threads.virtual.enabled=true
 pagamento.processor.default.url=http://payment-processor-default:8080
-pagamento.processor.fallback.url=http://localhost:8002
+pagamento.processor.fallback.url=http://payment-processor-fallback:8080
