--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.application.name=rinha2025spring
 spring.data.mongodb.uri=mongodb://mongodb:27017/rinhabackend
 spring.threads.virtual.enabled=true
 pagamento.processor.default.url=http://payment-processor-default:8080
-pagamento.processor.fallback.url=http://localhost:8002
+pagamento.processor.fallback.url=http://payment-processor-fallback:8080
+spring.cloud.openfeign.client.config.pagamentoProcessorDefault.readTimeout=15000
+spring.cloud.openfeign.client.config.pagamentoProcessorFallback.readTimeout=15000
+spring.cloud.openfeign.client.config.pagamentoProcessorDefault.connectTimeout=15000
+spring.cloud.openfeign.client.config.pagamentoProcessorFallback.connectTimeout=15000
