--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -3,3 +3,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/rinhabackend
 spring.threads.virtual.enabled=true
 pagamento.processor.default.url=http://localhost:8001
 pagamento.processor.fallback.url=http://localhost:8002
+spring.cloud.openfeign.client.config.pagamentoProcessorDefault.read-timeout=15000
+spring.cloud.openfeign.client.config.pagamentoProcessorFallback.read-timeout=15000
+spring.cloud.openfeign.client.config.pagamentoProcessorDefault.connect-timeout=15000
+spring.cloud.openfeign.client.config.pagamentoProcessorFallback.connect-timeout=15000
