--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,33 +15,33 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.20"
+          cpus: "0.25"
           memory: "50MB"
 
   api1: &api
-    image: matheuspieropan/rinhabackend2025:springmvc
+    image: matheuspieropan/rinhabackend2025:graalvm
     hostname: api1
     networks:
       - backend
       - payment-processor
     ports:
       - "8080:8080"
-  #    deploy:
-  #      resources:
-  #        limits:
-  #          cpus: "0.6"
-  #          memory: "105MB"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: "80MB"
 
   api2:
     <<: *api
     hostname: api2
     ports:
       - "8081:8080"
-  #    deploy:
-  #      resources:
-  #        limits:
-  #          cpus: "0.6"
-  #          memory: "105MB"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: "80MB"
 
   mongodb:
     image: mongo:7.0
@@ -51,11 +51,11 @@ services:
       - "27017:27017"
     networks:
       - backend
-#    deploy:
-#      resources:
-#        limits:
-#          cpus: "0.2"
-#          memory: "90MB"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.25"
+          memory: "140MB"
 
 networks:
   backend:
